# sculk-demo

./: Cargo.toml  README.md  build.rs  sculk-demo.desktop
.cargo/: config.toml
assets/: icon.icns
src/: main.rs
