[package]
name = "sculk-demo"
version = "0.1.0"
edition = "2024"

[package.metadata.bundle]
name = "sculk demo"
identifier = "io.github.kercyding.sculk-demo"
short_description = "A GUI demo for the sculk P2P tunnel library"
copyright = "Copyright © 2025 KercyDing"
category = "public.app-category.utilities"
icon = ["assets/icon.icns", "assets/icon.ico"]

[dependencies]
sculk = { version = "0.1.0", features = ["persist"] }
eframe = "0.33"
image = { version = "0.25", features = ["png"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
